fix: hide scrollbars globally

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -60,4 +60,13 @@ a {
 
 ul, ol {
   list-style: none;
-} 
+}
+
+* {
+  scrollbar-width: none; // Firefox
+  -ms-overflow-style: none; // IE/Edge
+}
+
+*::-webkit-scrollbar {
+  display: none; // Chrome/Safari
+}
